Manual/Examples/Let6.out
__   __ __  __  ____   ___      _________________________________________
||   || ||  || ||  || ||__      Hugs 98: Based on the Haskell 98 standard
||___|| ||__|| ||__||  __||     Copyright (c) 1994-2005
||---||         ___||           World Wide Web: http://haskell.org/hugs
||   ||                         Report bugs to: hugs-bugs@haskell.org
||   || Version: March 2005     _________________________________________

Hugs mode: Restart with command line option +98 for Haskell 98 mode

Type :? for help
Let6> 
Program error: user error (
*** lexical error at (line 2, column 13):
    a = 4 * [7 + 1 - 1)
            ^
 in a * a
<end of input>
)

Let6> 
Program error: user error (
*** syntax error at (line 3, column 3):
 in a * a
  ^
<end of input>
* expected: + or -, * or /, ))

Let6> 
Program error: user error (
*** syntax error at (line 3, column 2):
 a * a
 ^
<end of input>
* expected: + or -, * or /, in)

Let6> 
Program error: user error (
*** syntax error at (line 2, column 7):
    a = 4 * (7 + 1 - 1)
      ^
 in a * a
<end of input>
* expected: + or -, * or /, <end of input>)

Let6> 
Program error: user error (
*** syntax error at (line 2, column 18):
    a = 4 * (7 + - 1)
                 ^
 in a * a
<end of input>
* expected: <numeral>, <identifier>, let, ()

Let6> 
Program error: user error (
*** syntax error at (line 2, column 12):
    a = 4  (7 + 1 - 1)
           ^
 in a * a
<end of input>
* expected: + or -, * or /, in)

Let6> [Leaving Hugs]
